--- a/_includes/author_skills.html
+++ b/_includes/author_skills.html
@@ -1,2 +1,10 @@
-<p> HTML , CSS , Javascript , PHP, Python, C</p>
-<p> Adobe XD, Inkscape, Git, Linux </p>
+<p>
+    <ul>
+        <li>Node.js</li>
+        <li>Mongodb</li>
+        <li>Python</li>
+        <li>Flask</li>
+        <li>Linux</li>
+        <li>SQL</li>
+    </ul>
+</p> 
